--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@payloadcms/next": "latest",
     "@payloadcms/payload-cloud": "latest",
     "@payloadcms/richtext-lexical": "latest",
+    "axios": "^1.7.9",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
     "next": "15.1.0",
     "payload": "latest",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-icons": "^5.4.0",
     "sharp": "0.32.6"
   },
   "devDependencies": {
